--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pixivpy = "^3.5.0"
 arrow = "^0.15.2"
 
 [tool.poetry.dev-dependencies]
+black = "^19.3b0"
 
 [build-system]
 requires = ["poetry>=0.12"]
