--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,7 @@ black = "^19.3b0"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+line-length = 100
+target_version = ['py37']
