--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,15 @@ license = "GPL-3.0-or-later"
 python = "^3.7"
 pixivpy = "^3.5.0"
 arrow = "^0.15.2"
+termcolor = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.3b0"
 
+[tool.black]
+line-length = 100
+target_version = ['py37']
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
-[tool.black]
-line-length = 100
-target_version = ['py37']
