--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,13 @@ termcolor = "^1.1.0"
 [tool.poetry.dev-dependencies]
 black = "^19.3b0"
 
+[tool.poetry.scripts]
+pixiv-dl = 'pixiv_dl.downloader:main'
+
 [tool.black]
 line-length = 100
 target_version = ['py37']
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
