--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.7"
 pixivpy = "^3.5.0"
 arrow = "^0.15.2"
 termcolor = "^1.1.0"
+tomlkit = "^0.5.8"
 
 [tool.poetry.dev-dependencies]
 black = "^19.3b0"
