--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ pixivpy = "^3.5.0"
 arrow = "^0.15.2"
 termcolor = "^1.1.0"
 tomlkit = "^0.5.8"
+# used for filtering
+jq = { version = "^0.1.6", optional = true }
+
+[tool.poetry.extras]
+filter = ["jq"]
 
 [tool.poetry.dev-dependencies]
 black = "^19.3b0"
