--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ termcolor = "^1.1.0"
 tomlkit = "^0.5.8"
 flask = "^1.1.1"
 pendulum = "^2.0.5"
+sqlalchemy = "^1.3.13"
 
 [tool.poetry.extras]
 filter = ["jq"]
