--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,21 @@ readme = "README.rst"
 repository = "https://github.com/Fuyukai/pixiv-dl"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-pixivpy = "^3.5.0"
+python = "^3.9"
+pixivpy = "^3.6.1"
 termcolor = "^1.1.0"
-tomlkit = "^0.5.8"
-flask = "^1.1.1"
+tomlkit = "^0.5.11"
+flask = "^2.0.2"
 pendulum = "^2.0.5"
-sqlalchemy = "^1.3.13"
+sqlalchemy = "^1.4.27"
 
 [tool.poetry.extras]
 filter = ["jq"]
 
 [tool.poetry.dev-dependencies]
-black = "^19.3b0"
+black = "^21.11b1"
 twine = "^2.0.0"
+isort = "^5.10.1"
 
 [tool.poetry.scripts]
 pixiv-dl = 'pixiv_dl.downloader:main'
@@ -29,7 +30,11 @@ pixiv-filter = 'pixiv_dl.filter:main'
 
 [tool.black]
 line-length = 100
-target_version = ['py37']
+target_version = ['py39']
+
+[tool.isort]
+profile = "black"
+
 
 [build-system]
 requires = ["poetry>=0.12"]
